--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "PetercordBot",
+  "name": "Petercord Userbot",
   "description": "PETERCORD",
   "logo": "https://telegra.ph/file/b52e42266a323cbe9f849.jpg",
     "keywords": [
